--- a/cayThong.html
+++ b/cayThong.html
@@ -89,6 +89,7 @@
                   <div class="titlepage">
                      <h2>Cây Thông</h2>
                      <h1>
+                        <li>Mã hàng: 001</li>
                         <li>Chiều cao: 10cm</li>
                         <li>Bán kính đáy: 8cm</li>
                         <li>15.000đ</li>
