--- a/nguoiTuyet2.html
+++ b/nguoiTuyet2.html
@@ -89,6 +89,7 @@
                   <div class="titlepage">
                      <h2>Người Tuyết 2.0</h2>
                      <h1>
+                        <li>Mã hàng: 003</li>
                         <li>Chiều cao hình trụ: 12 cm</li>
                         <li>Bán kính đáy: 3.25 cm</li>
                         <li>3.4 cm</li>
