--- a/snowMan.html
+++ b/snowMan.html
@@ -89,6 +89,7 @@
                   <div class="titlepage">
                      <h2>Người Tuyết</h2>
                      <h1>
+                        <li>Mã hàng: 002</li>
                         <li>Bán kính cầu của đầu: 1.7 cm</li>
                         <li>Bán kính cầu của thân: 2.5 cm</li>
                         <li>Bán kính đáy của nón: 1.7 cm</li>
