--- a/baitoankho.html
+++ b/baitoankho.html
@@ -84,18 +84,15 @@
             <div class="row">
                <div class="col-md-7">
                   <div class="product_box">
-                     <figure><img src="images/nguoiTuyet2.jpg" alt="#"/></figure>
+                     <figure><img src="images/baitoankho.jpg" alt="#"/></figure>
                   </div>
                </div>
                <div class="col-md-5">
                   <div class="titlepage">
-                     <h2>Người Tuyết 2.0</h2>
+                     <h2>Bài toán thực tế 
+                     </h2>
                      <h1>
-                        <li>Mã hàng: 003</li>
-                        <li>Chiều cao hình trụ: 12 cm</li>
-                        <li>Bán kính đáy: 3.25 cm</li>
-                        <li>3.4 cm</li>
-                        <li>12.000đ</li>
+                        Phần thưởng cho ai giải chính xác và nhanh nhất là con người tuyết nhóm mình
                      </h1>
                   </div>
                </div>
