--- a/cayThong.html
+++ b/cayThong.html
@@ -65,7 +65,9 @@
                               <li class="nav-item">
                                  <a class="nav-link" href="contact.html">Liên hệ</a>
                               </li>
-                              
+                              <li class="nav-item">
+                                 <a class="nav-link" href="baitoankho.html">Toán thực tế</a>
+                              </li>
                            </ul>
                         </div>
                      </nav>
